fixed typedwriting effects not displaying correctly on iphones + firefox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,7 @@ input, select, textarea {
 .line-1{
 	position: relative;
 	top: 50%;  
-	width: 26.3em;
+	width: 26em;
 	margin: 0 auto;
 	border-right: 2px solid rgba(255,255,255,.75);
 	font-size: 180%;
